--- a/BeerClassWebApp/Views/_ViewImports.cshtml
+++ b/BeerClassWebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using BeerClassWebApp
-@using BeerClassWebApp.Models
+﻿@using BeerClassifer.WebApp
+@using BeerClassifier.WebApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
