Se apunta a un nuevo modelo mas optimizado

--- a/BeerClassWebApp/Views/Home/AvailableClasses.cshtml
+++ b/BeerClassWebApp/Views/Home/AvailableClasses.cshtml
@@ -3,7 +3,7 @@
 }
 
     <div class="text-center">
-        <h1 class="display-4">Marcas introduccidas en nuestro modelo</h1>
+        <h1 class="display-4">Marcas introducidas en nuestro modelo</h1>
 
         <div class="list-inline-item">
             <div class="card">
